# spark

./: .gitignore  pyproject.toml
spark/: Spark.toml  __init__.py  __main__.py  codes.py  context.py  destinations.py  project.py
spark/builder/: BuildProcessExecutor.py  __init__.py
spark/cache/: SparkCacheFile.py  __init__.py  crypto.py  temporary.py
spark/lib/: __init__.py  tee.py
tests/: project.py
tests/builder/: BuildProcessExecutorTests.py
tests/cache/: Spark.toml  SparkCacheFileTests.py  crypto_tests.py
tests/lib/: tee_tests.py
