[tool.poetry]
name = "spark"
version = "0.1.0-rc"
license = "Apache License 2"
description = "A declarative build system for C and C++ projects"
authors = ["Vladyslav Korol <chocolate-magnate@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
gitpython = "^3.1.43"
aiofiles = "^23.2.1"
cryptography = "^42.0.8"
keyring = "^25.2.1"
frozendict = "^2.4.4"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
